minio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
      annotations:
        backup.velero.io/backup-volumes-excludes: minio-storage
    spec:
      containers:
      - name: minio
        image: minio/minio
        command:
          - minio
          - server
          - /data
          - --address
          - :9000
          - --console-address
          - :9001
        ports:
        - containerPort: 9000
        - containerPort: 9001
        volumeMounts:
        - mountPath: /data
          name: minio-storage
      volumes:
      - name: minio-storage
        persistentVolumeClaim:
          claimName: minio-pvc
