minio/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
spec:
  selector:
    matchLabels:
      app: minio
  serviceName: minio-service
  replicas: 2
  template:
    metadata:
      labels:
        app: minio
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchLabels:
                app: minio
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: minio
      containers:
      - name: minio
        image: quay.io/minio/minio:latest
        command:
          - minio
          - server
          - http://minio-{1...2}.minio-service.minio.svc.cluster.local/data
          - --address
          - :9000
          - --console-address
          - :9001
        ports:
        - containerPort: 9000
        - containerPort: 9001
        volumeMounts:
        - mountPath: /data
          name: minio-storage
  volumeClaimTemplates:
  - metadata:
      name: minio-storage
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: local-path
      resources:
        requests:
          storage: 10Gi
