minio/anubis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anubis-minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anubis-minio
  template:
    metadata:
      labels:
        app: anubis-minio
    spec:
      containers:
      - name: anubis-minio
        image: ghcr.io/techarohq/anubis:latest
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: anubis-minio-service
spec:
  selector:
    app: anubis-minio
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
