minio/minio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: ghcr.io/pmh-only/rustfs:latest
          livenessProbe:
            exec:
              command:
                - curl
                - -kfH
                - "Host: hello.s3.pmh.codes"
                - https://localhost:9000/index.html
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 1
          volumeMounts:
            - mountPath: /data
              name: minio-storage
            - mountPath: /tls
              name: minio-tls-secret
      volumes:
        - name: minio-storage
          hostPath:
            path: /mnt/data/minio
        - name: minio-tls-secret
          secret:
            secretName: minio-tls-secret
            items:
            - key: tls.crt
              path: rustfs_cert.pem
            - key: tls.key
              path: rustfs_key.pem
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  clusterIP: 172.17.0.40
  selector:
    app: minio
  ports:
    - name: s3
      protocol: TCP
      port: 443
      targetPort: 9000

    - name: console
      protocol: TCP
      port: 9001
      targetPort: 9001
