minio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console-service
spec:
  selector:
    app: minio-console
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
