minio/console.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-console
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: minio-console
  template:
    metadata:
      labels:
        app: minio-console
    spec:
      containers:
        - name: minio
          image: ghcr.io/georgmangold/console
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console-service
spec:
  selector:
    app: minio-console
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: gateway
  hostnames:
    - console.s3.pmh.codes
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: minio-console-service
          port: 9090
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console-redirect
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: gateway
  hostnames:
    - minio.pmh.codes
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: console.s3.pmh.codes
            statusCode: 301
